force-app/main/default/objects/Certification_Topic__c/Certification_Topic__c.object-meta.xml
<CustomObject>
    <description>The list of the topics that were passed at the time of the exam</description>
    <label>Certification Topic</label>
    <nameField>
        <label>Certification Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certification Topics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>