force-app/main/default/objects/Certification_Topic__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>The users score for this topic</description>
    <label>Result</label>
    <precision>4</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>