force-app/main/default/objects/Certification_Topic__c/fields/Weighting__c.field-meta.xml
<CustomField>
    <fullName>Weighting__c</fullName>
    <description>The value of the credential topic at the time of the certification</description>
    <label>Weighting</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>